--- a/nlp.html
+++ b/nlp.html
@@ -70,7 +70,7 @@
 <h5><a href='https://scorable.recruitee.com/o/data-scientist-nlp-fmdiv'>
       Data Scientist NLP (F/M/DIV) - Scorable
     </a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 <h5><a href='https://sparkcognition.applytojob.com/apply/CbTOgT6iN4/Front-End-Engineer-DeepNLP'>Front End Engineer - DeepNLP - SparkCognition - Career Page</a></h5> 
@@ -197,7 +197,7 @@ of the job details and apply today!</p>
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-09-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/outreach/243afb93-d48c-4011-ade9-ad15ab852d5a'>Outreach - Data Science Manager - Natural Language Processing</a></h5> 
+<h5><a href='https://jobs.lever.co/outreach/243afb93-d48c-4011-ade9-ad15ab852d5a'>Outreach - Data Science Manager - Natural Language Processing</a></h5> 
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-09-29</p>
 <hr/>
@@ -205,7 +205,7 @@ of the job details and apply today!</p>
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-09-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://snap.hr/babylon-health/job/machine-learning-software-engineer-nlp/b7dd3814bac7a1f0f52a69100f416ddb/'>Machine Learning Software Engineer - NLP at Babylon Health</a></h5> 
+<h5><a href='https://snap.hr/babylon-health/job/machine-learning-software-engineer-nlp/b7dd3814bac7a1f0f52a69100f416ddb/'>Machine Learning Software Engineer - NLP at Babylon Health</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-09-28</p>
 <hr/>
@@ -274,11 +274,11 @@ and right place, underpinned by a multi-layered data-driven approach. Knorex?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-13</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/swiggy/787fb155-01ca-40b1-b049-e03fb394143e'>Swiggy - Senior Data Scientist- NLP</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/swiggy/787fb155-01ca-40b1-b049-e03fb394143e'>Swiggy - Senior Data Scientist- NLP</a></h5> 
 <p><span class="badge badge-light">Bangalore</span></p>
 <p>Posted on: 2019-09-12</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dataminr/jobs/1862064'>Job Application for Research Scientist (NLP, IR, Complex Networks, Recommender Systems) at Dataminr</a></h5> 
+<h5><a href='https://boards.greenhouse.io/dataminr/jobs/1862064'>Job Application for Research Scientist (NLP, IR, Complex Networks, Recommender Systems) at Dataminr</a></h5> 
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-09-12</p>
 <hr/>
@@ -311,21 +311,21 @@ eHealth (w/m/d) in Freiburg im Breisgau (published: 05.09.2019). Apply now or?..
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/dataminr/jobs/1851526'>Job Application for Research Internship - Spring 2020 (NLP, Computer Vision, or Machine Learning) at Dataminr</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dataminr/jobs/1851526'>Job Application for Research Internship - Spring 2020 (NLP, Computer Vision, or Machine Learning) at Dataminr</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-09-06</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/rasa/jobs/4401998002'>Job Application for Solutions Engineer - NLP (m/f/x) at Rasa</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/rasa/jobs/4401998002'>Job Application for Solutions Engineer - NLP (m/f/x) at Rasa</a></h5> 
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-09-05</p>
 <hr/>
-<h5><a href='https://visiblealpha.recruiterbox.com/jobs/fk03fqj/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://visiblealpha.recruiterbox.com/jobs/fk03fqj/'>
     Senior Software Engineer (NLP) at Visible Alpha
 </a></h5> 
 <p><span class="badge badge-light">Mumbai</span></p>
 <p>Posted on: 2019-09-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://olxbrasil.recruiterbox.com/jobs/fk033gc/'>
+<h5><a href='https://olxbrasil.recruiterbox.com/jobs/fk033gc/'>
     Cientista de Dados (NLP) at OLX Brasil
 </a></h5> 
 <p><span class="badge badge-light">S?o Paulo</span></p>
@@ -337,7 +337,7 @@ eHealth (w/m/d) in Freiburg im Breisgau (published: 05.09.2019). Apply now or?..
 machine learning to surface new knowledge. We are a VC-backed tech company
 ?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://axur.workable.com/jobs/1111409'>Axur. Digital Risk Protection - Jobs: Data Scientist - NLP - Apply online</a></h5> 
+<h5><a href='https://axur.workable.com/jobs/1111409'>Axur. Digital Risk Protection - Jobs: Data Scientist - NLP - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>20 Ago 2019 ... Como Analista de Machine Learning na Axur, seu desafio ser? trabalhar com 
 processamento de linguagem natural, analisando dados e criando algoritmos 
@@ -406,7 +406,7 @@ in Barcelona. Review all of the job details and apply today!</p>
 <p><span class="badge badge-light"></span></p>
 <p>Aug 12, 2019 ... Apply online for the job of Senior NLP Engineer at Amplexor.</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/concertohealthai/7626ab95-6c49-4963-be82-70d8e7fd3c12'>Concerto HealthAI - NLP Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/concertohealthai/7626ab95-6c49-4963-be82-70d8e7fd3c12'>Concerto HealthAI - NLP Engineer</a></h5> 
 <p><span class="badge badge-light">Bangalore</span></p>
 <p>Posted on: 2019-08-19</p>
 <hr/>
@@ -449,7 +449,7 @@ GumGum enables highly impactful digital advertising campaigns with contextual
 <p><span class="badge badge-light">Renningen, Germany</span></p>
 <p>Posted on: 2019-08-09</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999693114595-internship-in-natural-language-processing-and-semantic-reasoning'>Bosch Group Internship in Natural Language Processing and Semantic Reasoning | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999693114595-internship-in-natural-language-processing-and-semantic-reasoning'>Bosch Group Internship in Natural Language Processing and Semantic Reasoning | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Renningen, Germany</span></p>
 <p>Posted on: 2019-08-09</p>
 <hr/>
@@ -461,7 +461,7 @@ GumGum enables highly impactful digital advertising campaigns with contextual
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-08</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/drwfr/jobs/1796523'>Job Application for Scientifique de donn?es - NLP at DRW Montreal</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/drwfr/jobs/1796523'>Job Application for Scientifique de donn?es - NLP at DRW Montreal</a></h5> 
 <p><span class="badge badge-light">Montreal</span></p>
 <p>Posted on: 2019-08-06</p>
 <hr/>
@@ -503,7 +503,7 @@ India.</p>
 <p>1 day ago ... Bonus Points. Experience with ElasticSearch, GraphQL, or React. Background in 
 Machine Learning or Statistics. Why you'd love working here. Everyone at?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
